# aryx

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_MCP_CONFIG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_QA_GUIDE.md  DEMO_SETUP.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.raven/: .gitignore  architecture.md  manifest.json  mcp-policy.json
.streamlit/: config.toml
benchmarks/: loaders.py  metrics.py  report.py  requirements.txt  run_bench.py  sweep.py
dev/: seed.sql  teardown.sql  validate.py
docs/: ARCHITECTURE.md  Aryx-Support-Demo.md  DOCKERHUB.md  EDITIONS.md  FEATURES.md  HANDOFF.md  INGESTION_GUIDE.md  INSTALL.md  LICENSING.md  Ontology_Detailed.md  RAVEN.md  RDF_EXPORT_GUIDE.md  README.html  USER_GUIDE.md  demo-guide.html  demo_questions.md  doc_delta.md  doc_delta_tech.md  mcp-guide.html  ontology_reasoning_readme.md
migrations/: 002_support_demo_schema.sql
scripts/: demo_onboard_api.py  docker-hub-publish.sh  load_demo_data.sh  load_demo_via_api.py  patch_ticket_names.py  seed_demo.py  seed_support.py
temp_design/: data-explorer.html  llm-agents-architecture.html  onboarding-wizard.html
tests/: funnel_helpers.py  test_ab.py  test_actions.py  test_adjudication.py  test_auth.py  test_axioms.py  test_blocking.py  test_brief_draft.py  test_chunked_resolution.py  test_confidence.py  test_data_api_hierarchy.py  test_datasource_secrets.py  test_explore.py  (+14 more)
(+589 files in other folders)
